[package]
name = "libtorrent-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl-sys = { version = "0.9.80", features = ["vendored"] }
autocxx = "0.24.0"
cxx = { version = "1.0.91", features = ["c++14"] }

[build-dependencies]
autocxx-build = "0.24.0"
cmake = "0.1.49"
miette = { version = "5.5.0", features = ["fancy"] }
