[package]
name = "libtorrent-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl-sys = { version = "0.9.80", features = ["vendored"] }
cxx = { version = "1.0.91", features = ["c++17"] }

[build-dependencies]
cxx-build = "1.0.91"
cmake = "0.1.49"
